--- a/APM/index.html
+++ b/APM/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head lang="en">
     <meta charset="UTF-8">
     <title>Acme Product Management</title>
@@ -26,14 +27,15 @@
     <script src="scripts/angular-resource.js"></script>
     <script src="scripts/angular-mocks.js"></script>
     <script src="scripts/angular-route.js"></script>
-    
-    <!-- Application Script -->
 
+    <!-- Application Script -->
+    <script src="app/app.js"></script>
     <!-- Domain Classes -->
 
     <!-- Services -->
 
     <!-- Controllers -->
+    <script src="app/products/productListCtrl.js"></script>
 </body>
 
 </html>
