--- a/APM/index.html
+++ b/APM/index.html
@@ -30,6 +30,7 @@
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
+    <script src="app/common/services/productResourceMock.js"></script>
     <!-- Domain Classes -->
     <script src="app/products/product.js"></script>
     <!-- Services -->
